--- a/css/styles.css
+++ b/css/styles.css
@@ -32,20 +32,21 @@ header {
 }
 
 .logo{
+  margin-left: 10%;
   font-size: 50px;
   text-align:left;
 }
 
 .navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items:right;
+  display:block;
+  justify-content:left;
   padding: 1em 2em;
 }
 
 .navbar ul {
-  list-style-type: none;
+  list-style-type:none;
   display: flex;
+  justify-content: end;
   gap: 2em;
 }
 
@@ -57,18 +58,21 @@ header {
 .bio-container {
   display: flex;
   align-items: center; /* Alinea verticalmente los contenidos */
-  margin: 20px; /* Espacio inferior para separar de otros elementos */
+  margin: 10px; /* Espacio inferior para separar de otros elementos */
+  margin-top: 5%;
 }
 
 .bio-photo {
   flex: 1; /* Ocupa el 50% del ancho disponible */
   display: flex;
   justify-content: flex-end; /* Alinea el contenido al final del contenedor */
-  margin: 20px;
+  margin-right: 20px;
+  
 }
 
 .bio-text {
   flex: 1; /* Ocupa el 50% del ancho disponible */
+  margin-left: 20px;
 }
 
 .rounded-photo {
@@ -90,6 +94,11 @@ header {
 
 
 /* Timeline Styles */
+/* -------------------------------- 
+
+Main Components 
+
+-------------------------------- */
 .cd-horizontal-timeline {
   opacity: 0;
   margin: 2em auto;
@@ -97,18 +106,15 @@ header {
   -moz-transition: opacity 0.2s;
   transition: opacity 0.2s;
 }
-
 .cd-horizontal-timeline::before {
   /* never visible - this is used in jQuery to check the current MQ */
   content: 'mobile';
   display: none;
 }
-
 .cd-horizontal-timeline.loaded {
   /* show the timeline after events position has been set (using JavaScript) */
   opacity: 1;
 }
-
 .cd-horizontal-timeline .timeline {
   position: relative;
   height: 100px;
@@ -116,14 +122,12 @@ header {
   max-width: 800px;
   margin: 0 auto;
 }
-
 .cd-horizontal-timeline .events-wrapper {
   position: relative;
   height: 100%;
   margin: 0 40px;
   overflow: hidden;
 }
-
 .cd-horizontal-timeline .events-wrapper::after, .cd-horizontal-timeline .events-wrapper::before {
   /* these are used to create a shadow effect at the sides of the timeline */
   content: '';
@@ -133,19 +137,16 @@ header {
   height: 100%;
   width: 20px;
 }
-
 .cd-horizontal-timeline .events-wrapper::before {
   left: 0;
   background-image: -webkit-linear-gradient( left , #f8f8f8, rgba(248, 248, 248, 0));
   background-image: linear-gradient(to right, #f8f8f8, rgba(248, 248, 248, 0));
 }
-
 .cd-horizontal-timeline .events-wrapper::after {
   right: 0;
   background-image: -webkit-linear-gradient( right , #f8f8f8, rgba(248, 248, 248, 0));
   background-image: linear-gradient(to left, #f8f8f8, rgba(248, 248, 248, 0));
 }
-
 .cd-horizontal-timeline .events {
   /* this is the grey line/timeline */
   position: absolute;
@@ -159,7 +160,6 @@ header {
   -moz-transition: -moz-transform 0.4s;
   transition: transform 0.4s;
 }
-
 .cd-horizontal-timeline .filling-line {
   /* this is used to create the green line filling the timeline */
   position: absolute;
@@ -183,7 +183,6 @@ header {
   -moz-transition: -moz-transform 0.3s;
   transition: transform 0.3s;
 }
-
 .cd-horizontal-timeline .events a {
   position: absolute;
   bottom: 0;
@@ -199,7 +198,6 @@ header {
   -o-transform: translateZ(0);
   transform: translateZ(0);
 }
-
 .cd-horizontal-timeline .events a::after {
   /* this is used to create the event spot */
   content: '';
@@ -221,25 +219,20 @@ header {
   -moz-transition: background-color 0.3s, border-color 0.3s;
   transition: background-color 0.3s, border-color 0.3s;
 }
-
 .no-touch .cd-horizontal-timeline .events a:hover::after {
   background-color: #7b9d6f;
   border-color: #7b9d6f;
 }
-
 .cd-horizontal-timeline .events a.selected {
   pointer-events: none;
 }
-
 .cd-horizontal-timeline .events a.selected::after {
   background-color: #7b9d6f;
   border-color: #7b9d6f;
 }
-
 .cd-horizontal-timeline .events a.older-event::after {
   border-color: #7b9d6f;
 }
-
 @media only screen and (min-width: 1100px) {
   .cd-horizontal-timeline {
     margin: 6em auto;
@@ -274,7 +267,6 @@ header {
   -moz-transition: border-color 0.3s;
   transition: border-color 0.3s;
 }
-
 .cd-timeline-navigation a::after {
   /* arrow icon */
   content: '';
@@ -292,7 +284,6 @@ header {
   transform: translateX(-50%) translateY(-50%);
   background: url(../img/cd-arrow.svg) no-repeat 0 0;
 }
-
 .cd-timeline-navigation a.prev {
   left: 0;
   -webkit-transform: translateY(-50%) rotate(180deg);
@@ -301,23 +292,18 @@ header {
   -o-transform: translateY(-50%) rotate(180deg);
   transform: translateY(-50%) rotate(180deg);
 }
-
 .cd-timeline-navigation a.next {
   right: 0;
 }
-
 .no-touch .cd-timeline-navigation a:hover {
   border-color: #7b9d6f;
 }
-
 .cd-timeline-navigation a.inactive {
   cursor: not-allowed;
 }
-
 .cd-timeline-navigation a.inactive::after {
   background-position: 0 -16px;
 }
-
 .no-touch .cd-timeline-navigation a.inactive:hover {
   border-color: #dfdfdf;
 }
@@ -331,7 +317,6 @@ header {
   -moz-transition: height 0.4s;
   transition: height 0.4s;
 }
-
 .cd-horizontal-timeline .events-content li {
   position: absolute;
   z-index: 1;
@@ -352,7 +337,6 @@ header {
   -moz-animation-timing-function: ease-in-out;
   animation-timing-function: ease-in-out;
 }
-
 .cd-horizontal-timeline .events-content li.selected {
   /* visible event content */
   position: relative;
@@ -364,30 +348,25 @@ header {
   -o-transform: translateX(0);
   transform: translateX(0);
 }
-
 .cd-horizontal-timeline .events-content li.enter-right, .cd-horizontal-timeline .events-content li.leave-right {
   -webkit-animation-name: cd-enter-right;
   -moz-animation-name: cd-enter-right;
   animation-name: cd-enter-right;
 }
-
 .cd-horizontal-timeline .events-content li.enter-left, .cd-horizontal-timeline .events-content li.leave-left {
   -webkit-animation-name: cd-enter-left;
   -moz-animation-name: cd-enter-left;
   animation-name: cd-enter-left;
 }
-
 .cd-horizontal-timeline .events-content li.leave-right, .cd-horizontal-timeline .events-content li.leave-left {
   -webkit-animation-direction: reverse;
   -moz-animation-direction: reverse;
   animation-direction: reverse;
 }
-
 .cd-horizontal-timeline .events-content li > * {
   max-width: 800px;
   margin: 0 auto;
 }
-
 .cd-horizontal-timeline .events-content h2 {
   font-weight: bold;
   font-size: 2.6rem;
@@ -395,26 +374,21 @@ header {
   font-weight: 700;
   line-height: 1.2;
 }
-
 .cd-horizontal-timeline .events-content em {
   display: block;
   font-style: italic;
   margin: 10px auto;
 }
-
 .cd-horizontal-timeline .events-content em::before {
   content: '- ';
 }
-
 .cd-horizontal-timeline .events-content p {
   font-size: 1.4rem;
   color: #959595;
 }
-
 .cd-horizontal-timeline .events-content em, .cd-horizontal-timeline .events-content p {
   line-height: 1.6;
 }
-
 @media only screen and (min-width: 768px) {
   .cd-horizontal-timeline .events-content h2 {
     font-size: 7rem;
@@ -437,7 +411,6 @@ header {
     -webkit-transform: translateX(0%);
   }
 }
-
 @-moz-keyframes cd-enter-right {
   0% {
     opacity: 0;
@@ -448,7 +421,6 @@ header {
     -moz-transform: translateX(0%);
   }
 }
-
 @keyframes cd-enter-right {
   0% {
     opacity: 0;
@@ -467,7 +439,6 @@ header {
     transform: translateX(0%);
   }
 }
-
 @-webkit-keyframes cd-enter-left {
   0% {
     opacity: 0;
@@ -478,7 +449,6 @@ header {
     -webkit-transform: translateX(0%);
   }
 }
-
 @-moz-keyframes cd-enter-left {
   0% {
     opacity: 0;
@@ -489,7 +459,6 @@ header {
     -moz-transform: translateX(0%);
   }
 }
-
 @keyframes cd-enter-left {
   0% {
     opacity: 0;
