--- a/css/styles.css
+++ b/css/styles.css
@@ -16,8 +16,29 @@ body {
   background-color: #f8f8f8;
 }
 
+ h2 {
+  font-weight: bold;
+  font-size: 7rem;
+  font-family: "Playfair Display", serif;
+  font-weight: 700;
+  line-height: 1.2;
+}
+ em {
+  display: block;
+  font-style: italic;
+  margin: 10px auto;
+}
+ em::before {
+  content: '- ';
+}
+ p {
+  font-size: 1.4rem;
+  color: #959595;
+}
+
 a {
   color: #7b9d6f;
+  font-weight: 700;
   text-decoration: none;
 }
 
@@ -72,6 +93,7 @@ header {
 .bio-text {
   flex: 1; /* Ocupa el 50% del ancho disponible */
   margin-left: 20px;
+
 }
 
 .rounded-photo {
