--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro);
 
 /* Global Styles */
-*, *::after, *::before {
+*, *:after, *:before {
   box-sizing: border-box;
 }
 
@@ -21,7 +21,6 @@ h2 {
   font-weight: bold;
   font-size: 7rem;
   font-family: "Playfair Display", serif;
-  font-weight: 700;
   line-height: 1.2;
 }
 
@@ -31,7 +30,7 @@ em {
   margin: 10px auto;
 }
 
-em::before {
+em:before {
   content: '- ';
 }
 
@@ -107,17 +106,6 @@ header {
   text-align: left;
 }
 
-.ection-title{
-  text-align: left;
-}
-
-.rounded-photo {
-  width: 50%;
-  height: auto;
-  border-radius: 50%;
-  object-fit: cover;
-}
-
 .section-title {
   font-size: 3rem;
   font-family: "Playfair Display", serif;
@@ -127,6 +115,13 @@ header {
   text-align: justify;
   width: 50%;
   font-size: 1.8rem;
+}
+
+.rounded-photo {
+  width: 50%;
+  height: auto;
+  border-radius: 50%;
+  object-fit: cover;
 }
 
 /* Timeline Styles */
@@ -142,7 +137,7 @@ Main Components
   -moz-transition: opacity 0.2s;
   transition: opacity 0.2s;
 }
-.cd-horizontal-timeline::before {
+.cd-horizontal-timeline:before {
   /* never visible - this is used in jQuery to check the current MQ */
   content: 'mobile';
   display: none;
@@ -164,7 +159,7 @@ Main Components
   margin: 0 40px;
   overflow: hidden;
 }
-.cd-horizontal-timeline .events-wrapper::after, .cd-horizontal-timeline .events-wrapper::before {
+.cd-horizontal-timeline .events-wrapper:after, .cd-horizontal-timeline .events-wrapper:before {
   /* these are used to create a shadow effect at the sides of the timeline */
   content: '';
   position: absolute;
@@ -173,14 +168,14 @@ Main Components
   height: 100%;
   width: 20px;
 }
-.cd-horizontal-timeline .events-wrapper::before {
+.cd-horizontal-timeline .events-wrapper:before {
   left: 0;
-  background-image: -webkit-linear-gradient( left , #f8f8f8, rgba(248, 248, 248, 0));
+  background-image: -webkit-linear-gradient(left, #f8f8f8, rgba(248, 248, 248, 0));
   background-image: linear-gradient(to right, #f8f8f8, rgba(248, 248, 248, 0));
 }
-.cd-horizontal-timeline .events-wrapper::after {
+.cd-horizontal-timeline .events-wrapper:after {
   right: 0;
-  background-image: -webkit-linear-gradient( right , #f8f8f8, rgba(248, 248, 248, 0));
+  background-image: -webkit-linear-gradient(right, #f8f8f8, rgba(248, 248, 248, 0));
   background-image: linear-gradient(to left, #f8f8f8, rgba(248, 248, 248, 0));
 }
 .cd-horizontal-timeline .events {
@@ -235,7 +230,7 @@ Main Components
   transform: translateZ(0);
 }
 
-.cd-horizontal-timeline .events a::after {
+.cd-horizontal-timeline .events a:after {
   /* this is used to create the event spot */
   content: '';
   position: absolute;
@@ -256,28 +251,35 @@ Main Components
   -moz-transition: background-color 0.3s, border-color 0.3s;
   transition: background-color 0.3s, border-color 0.3s;
 }
-.no-touch .cd-horizontal-timeline .events a:hover::after {
+.no-touch .cd-horizontal-timeline .events a:hover:after {
   background-color: #7b9d6f;
   border-color: #7b9d6f;
 }
 .cd-horizontal-timeline .events a.selected {
   pointer-events: none;
 }
-.cd-horizontal-timeline .events a.selected::after {
+.cd-horizontal-timeline .events a.selected:after {
   background-color: #7b9d6f;
   border-color: #7b9d6f;
 }
-.cd-horizontal-timeline .events a.older-event::after {
+.cd-horizontal-timeline .events a.older-event:after {
   border-color: #7b9d6f;
 }
 @media only screen and (min-width: 1100px) {
   .cd-horizontal-timeline {
     margin: 6em auto;
   }
-  .cd-horizontal-timeline::before {
+  .cd-horizontal-timeline:before {
     /* never visible - this is used in jQuery to check the current MQ */
     content: 'desktop';
   }
+}
+.cd-timeline-navigation {
+  list-style-type: none; /* Elimina los puntos de viñeta */
+  padding: 0; /* Elimina el padding predeterminado */
+}
+.events ol  {
+  list-style-type: none;
 }
 
 .cd-timeline-navigation a {
@@ -303,8 +305,9 @@ Main Components
   -webkit-transition: border-color 0.3s;
   -moz-transition: border-color 0.3s;
   transition: border-color 0.3s;
+  
 }
-.cd-timeline-navigation a::after {
+.cd-timeline-navigation a::before {
   /* arrow icon */
   content: '';
   position: absolute;
@@ -338,7 +341,7 @@ Main Components
 .cd-timeline-navigation a.inactive {
   cursor: not-allowed;
 }
-.cd-timeline-navigation a.inactive::after {
+.cd-timeline-navigation a.inactive:after {
   background-position: 0 -16px;
 }
 .no-touch .cd-timeline-navigation a.inactive:hover {
@@ -408,7 +411,6 @@ Main Components
   font-weight: bold;
   font-size: 2.6rem;
   font-family: "Playfair Display", serif;
-  font-weight: 700;
   line-height: 1.2;
 }
 .cd-horizontal-timeline .events-content em {
@@ -416,7 +418,7 @@ Main Components
   font-style: italic;
   margin: 10px auto;
 }
-.cd-horizontal-timeline .events-content em::before {
+.cd-horizontal-timeline .events-content em:before {
   content: '- ';
 }
 .cd-horizontal-timeline .events-content p {
@@ -433,6 +435,223 @@ Main Components
   .cd-horizontal-timeline .events-content em {
     font-size: 2rem;
   }
+  .cd-horizontal-timeline .events-content p {
+    font-size: 1.8rem;
+  }
+}
+
+@-webkit-keyframes cd-enter-right {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(100%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0%);
+  }
+}
+@-moz-keyframes cd-enter-right {
+  0% {
+    opacity: 0;
+    -moz-transform: translateX(100%);
+  }
+  100% {
+    opacity: 1;
+    -moz-transform: translateX(0%);
+  }
+}
+@keyframes cd-enter-right {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(100%);
+    -moz-transform: translateX(100%);
+    -ms-transform: translateX(100%);
+    -o-transform: translateX(100%);
+    transform: translateX(100%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0%);
+    -moz-transform: translateX(0%);
+    -ms-transform: translateX(0%);
+    -o-transform: translateX(0%);
+    transform: translateX(0%);
+  }
+}
+@-webkit-keyframes cd-enter-left {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(-100%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0%);
+  }
+}
+@-moz-keyframes cd-enter-left {
+  0% {
+    opacity: 0;
+    -moz-transform: translateX(-100%);
+  }
+  100% {
+    opacity: 1;
+    -moz-transform: translateX(0%);
+  }
+}
+@keyframes cd-enter-left {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(-100%);
+    -moz-transform: translateX(-100%);
+    -ms-transform: translateX(-100%);
+    -o-transform: translateX(-100%);
+    transform: translateX(-100%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0%);
+    -moz-transform: translateX(0%);
+    -ms-transform: translateX(0%);
+    -o-transform: translateX(0%);
+    transform: translateX(0%);
+  }
+}
+@media only screen and (max-width: 768px) {
+  .bio-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .bio-photo {
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+
+  .bio-text {
+    margin-left: 0;
+    text-align: left;
+  }
+
+  .rounded-photo {
+    width: 70%;
+  }
+
+  .section-description {
+    width: 90%;
+    font-size: 1.6rem;
+  }
+
+  .navbar ul {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .navbar ul li {
+    margin-bottom: 10px;
+  }
+}
+
+/* Custom Styles for Timeline */
+.cd-horizontal-timeline .events-content ul,
+.cd-horizontal-timeline .events-content ol {
+  list-style-type: none; /* Remove default bullets or numbering */
+  padding-left: 0; /* Remove default padding for lists */
+}
+
+.cd-horizontal-timeline .events-content li {
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  left: 0;
+  top: 0;
+  -webkit-transform: translateX(-100%);
+  -moz-transform: translateX(-100%);
+  -ms-transform: translateX(-100%);
+  -o-transform: translateX(-100%);
+  transform: translateX(-100%);
+  padding: 0 5%;
+  opacity: 0;
+  -webkit-animation-duration: 0.4s;
+  -moz-animation-duration: 0.4s;
+  animation-duration: 0.4s;
+  -webkit-animation-timing-function: ease-in-out;
+  -moz-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+}
+
+.cd-horizontal-timeline .events-content li.selected {
+  position: relative;
+  z-index: 2;
+  opacity: 1;
+  -webkit-transform: translateX(0);
+  -moz-transform: translateX(0);
+  -ms-transform: translateX(0);
+  -o-transform: translateX(0);
+  transform: translateX(0);
+}
+
+.cd-horizontal-timeline .events-content li.enter-right,
+.cd-horizontal-timeline .events-content li.leave-right {
+  -webkit-animation-name: cd-enter-right;
+  -moz-animation-name: cd-enter-right;
+  animation-name: cd-enter-right;
+}
+
+.cd-horizontal-timeline .events-content li.enter-left,
+.cd-horizontal-timeline .events-content li.leave-left {
+  -webkit-animation-name: cd-enter-left;
+  -moz-animation-name: cd-enter-left;
+  animation-name: cd-enter-left;
+}
+
+.cd-horizontal-timeline .events-content li.leave-right,
+.cd-horizontal-timeline .events-content li.leave-left {
+  -webkit-animation-direction: reverse;
+  -moz-animation-direction: reverse;
+  animation-direction: reverse;
+}
+
+.cd-horizontal-timeline .events-content li > * {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.cd-horizontal-timeline .events-content h2 {
+  font-weight: bold;
+  font-size: 2.6rem;
+  font-family: "Playfair Display", serif;
+  line-height: 1.2;
+}
+
+.cd-horizontal-timeline .events-content em {
+  display: block;
+  font-style: italic;
+  margin: 10px auto;
+}
+
+.cd-horizontal-timeline .events-content em:before {
+  content: '- ';
+}
+
+.cd-horizontal-timeline .events-content p {
+  font-size: 1.4rem;
+  color: #959595;
+}
+
+.cd-horizontal-timeline .events-content em,
+.cd-horizontal-timeline .events-content p {
+  line-height: 1.6;
+}
+
+@media only screen and (min-width: 768px) {
+  .cd-horizontal-timeline .events-content h2 {
+    font-size: 7rem;
+  }
+
+  .cd-horizontal-timeline .events-content em {
+    font-size: 2rem;
+  }
+
   .cd-horizontal-timeline .events-content p {
     font-size: 1.8rem;
   }
