--- a/css/styles.css
+++ b/css/styles.css
@@ -124,6 +124,94 @@ header {
   object-fit: cover;
 }
 
+/* Estilos para el modal */
+#writing {
+  padding: 20px 0;
+}
+
+.content {
+  text-align: center;
+}
+
+.section-title {
+  font-size: 2em;
+}
+
+.section-description {
+  font-size: 1.2em;
+  margin-bottom: 20px;
+}
+
+.pdf-container {
+  margin-top: 20px;
+}
+
+.pdf-container h3 {
+  font-size: 1.5em;
+  margin-bottom: 10px;
+}
+
+.article-link {
+  display: block;
+  text-decoration: none;
+}
+
+.article-image {
+  max-width: 100%;
+  margin: 0 auto;
+}
+
+.article-image img {
+  width: 100%;
+  height: auto;
+  display: block;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.pdf-link {
+  margin-top: 10px;
+}
+
+#pdfModal {
+  display: none;
+  position: fixed;
+  z-index: 9999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  overflow: auto;
+}
+
+.modal-content {
+  position: relative;
+  margin: auto;
+  width: 80%;
+  max-width: 800px;
+  height: 80%;
+  background-color: #fefefe;
+  padding: 20px;
+  border-radius: 8px;
+}
+
+.close {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  font-size: 30px;
+  color: #aaa;
+  cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 /* Timeline Styles */
 /* -------------------------------- 
 
@@ -409,7 +497,7 @@ Main Components
 }
 .cd-horizontal-timeline .events-content h2 {
   font-weight: bold;
-  font-size: 2.6rem;
+  font-size: 1.6rem;
   font-family: "Playfair Display", serif;
   line-height: 1.2;
 }
