--- a/css/styles.css
+++ b/css/styles.css
@@ -19,9 +19,15 @@ body {
 
 h2 {
   font-weight: bold;
-  font-size: 7rem;
+  font-size: 40px;
   font-family: "Playfair Display", serif;
   line-height: 1.2;
+}
+h3 {
+  font-weight:lighter;
+  font-size: 3rem;
+  font-family: "Playfair Display", serif;
+  line-height: 1;
 }
 
 em {
@@ -134,7 +140,7 @@ header {
 }
 
 .section-title {
-  font-size: 2em;
+  font-size: 4em;
 }
 
 .section-description {
@@ -146,10 +152,6 @@ header {
   margin-top: 20px;
 }
 
-.pdf-container h3 {
-  font-size: 1.5em;
-  margin-bottom: 10px;
-}
 
 .article-link {
   display: block;
@@ -210,6 +212,49 @@ header {
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+/*section de fotos
+*/
+.photo-section {
+  padding: 50px 0;
+  background: #f9f9f9;
+}
+
+.section-title {
+  font-size: 36px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.section-description {
+  text-align: center;
+  margin-bottom: 40px;
+  font-size: 18px;
+}
+
+.photo-grid {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.photo-category {
+  font-size: 24px;
+  margin: 20px 0 10px;
+  font-weight: bold;
+}
+
+.photo-gallery {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  width: 80%;
+}
+
+.photo-gallery img {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
 }
 
 /* Timeline Styles */
