--- a/css/styles.css
+++ b/css/styles.css
@@ -14,35 +14,39 @@ body {
   font-family: "Source Sans Pro", sans-serif;
   color: #383838;
   background-color: #f8f8f8;
-  text-align: center; /* Centrado del texto en todo el cuerpo */
+  text-align: center;
 }
 
-h2 {
-  font-weight: bold;
-  font-size: 40px;
+h2, .section-title {
   font-family: "Playfair Display", serif;
+  font-weight: bold;
+  color: #383838;
+  font-size: 4rem;
   line-height: 1.2;
 }
+
+
 h3 {
-  font-weight:lighter;
-  font-size: 3rem;
   font-family: "Playfair Display", serif;
+  font-weight: lighter;
+  font-size: 2rem;
   line-height: 1;
 }
 
 em {
   display: block;
   font-style: italic;
-  margin: 10px auto;
+  margin: 1rem auto;
 }
 
 em:before {
   content: '- ';
 }
 
-p {
-  font-size: 1.4rem;
+p, .section-description, .cd-horizontal-timeline .events-content p {
+  font-size: 1.6rem;
   color: #959595;
+  line-height: 1.6;
 }
 
 a {
@@ -50,8 +54,20 @@ a {
   font-weight: 700;
   text-decoration: none;
 }
+/* Ensures each section has a minimum height of 600px */
+section {
+  min-height: 300px;
+}
+.footer{
+  text-align: center;
+}
+.contact-info{
+  font-size: 2rem;
+}
 
-/* Header Styles */
+.writing-section{
+  background-color: #f9f9f9;
+}
 header {
   position: static;
   top: 0;
@@ -65,62 +81,55 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1em 10%;
-  box-sizing: border-box;
+  padding: 1rem 10%;
 }
 
 .logo {
-  font-size: 8rem;
-  text-align: left;
   font-family: "Playfair Display", serif;
+  font-size: 6rem;
+  text-align: left;
+  width: 50%;
 }
 
 .navbar {
   display: flex;
+  width: 50%;
 }
 
 .navbar ul {
   list-style-type: none;
   display: flex;
-  gap: 2em;
+  gap: 2rem;
   margin: 0;
   padding: 0;
+  color:#7b9d6f
 }
 
 .navbar ul li a {
   font-size: 2rem;
+  color:#7b9d6f
 }
 
-/* Bio Styles */
 .bio-container {
   display: flex;
   align-items: center;
-  margin: 10px;
+  margin: 1rem;
   margin-top: 5%;
 }
 
-.bio-photo {
+.bio-photo, .bio-text {
   flex: 1;
+}
+
+.bio-photo {
   display: flex;
   justify-content: flex-end;
-  margin-right: 20px;
+  margin-right: 2rem;
 }
 
 .bio-text {
-  flex: 1;
-  margin-left: 20px;
+  margin-left: 2rem;
   text-align: left;
-}
-
-.section-title {
-  font-size: 3rem;
-  font-family: "Playfair Display", serif;
-}
-
-.section-description {
-  text-align: justify;
-  width: 50%;
-  font-size: 1.8rem;
 }
 
 .rounded-photo {
@@ -130,37 +139,17 @@ header {
   object-fit: cover;
 }
 
-/* Estilos para el modal */
 #writing {
-  padding: 20px 0;
+  padding: 2rem 0;
 }
 
 .content {
   text-align: center;
 }
 
-.section-title {
-  font-size: 4em;
-}
-
-.section-description {
-  font-size: 1.2em;
-  margin-bottom: 20px;
-}
-
-.pdf-container {
-  margin-top: 20px;
-}
-
-
 .article-link {
   display: block;
   text-decoration: none;
-}
-
-.article-image {
-  max-width: 100%;
-  margin: 0 auto;
 }
 
 .article-image img {
@@ -171,8 +160,8 @@ header {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.pdf-link {
-  margin-top: 10px;
+.pdf-container, .pdf-link {
+  margin-top: 2rem;
 }
 
 #pdfModal {
@@ -194,61 +183,50 @@ header {
   max-width: 800px;
   height: 80%;
   background-color: #fefefe;
-  padding: 20px;
+  padding: 2rem;
   border-radius: 8px;
 }
 
 .close {
   position: absolute;
-  top: 10px;
-  right: 15px;
-  font-size: 30px;
+  top: 1rem;
+  right: 1.5rem;
+  font-size: 3rem;
   color: #aaa;
   cursor: pointer;
 }
 
-.close:hover,
-.close:focus {
+.close:hover, .close:focus {
   color: black;
   text-decoration: none;
   cursor: pointer;
 }
-/*section de fotos
-*/
+
 .photo-section {
-  padding: 50px 0;
+  padding: 5rem 0;
   background: #f9f9f9;
-}
-
-.section-title {
-  font-size: 36px;
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-.section-description {
-  text-align: center;
-  margin-bottom: 40px;
-  font-size: 18px;
+  align-items: center;
 }
 
 .photo-grid {
-  display: flex;
+  display:grid;
   flex-direction: column;
   align-items: center;
 }
 
 .photo-category {
-  font-size: 24px;
-  margin: 20px 0 10px;
+  font-family: "Playfair Display", serif;
+  font-size: 2.4rem;
+  margin: 2rem 0 1rem;
   font-weight: bold;
+  color: #7b9d6f;
 }
 
 .photo-gallery {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
-  width: 80%;
+  grid-template-columns: repeat(2, 2fr);
+  gap: 2rem;
+  width: 100%;
 }
 
 .photo-gallery img {
@@ -256,20 +234,6 @@ header {
   height: auto;
   border-radius: 8px;
 }
-
-.photo-category{
-  font-family: "Playfair Display", serif;
-  color: #7b9d6f;
-
-}
-
-
-/* Timeline Styles */
-/* -------------------------------- 
-
-Main Components 
-
--------------------------------- */
 .cd-horizontal-timeline {
   opacity: 0;
   margin: 2em auto;
@@ -445,7 +409,7 @@ Main Components
   -webkit-transition: border-color 0.3s;
   -moz-transition: border-color 0.3s;
   transition: border-color 0.3s;
-  
+
 }
 .cd-timeline-navigation a::before {
   /* arrow icon */
@@ -549,7 +513,7 @@ Main Components
 }
 .cd-horizontal-timeline .events-content h2 {
   font-weight: bold;
-  font-size: 1.6rem;
+  font-size: 4rem;
   font-family: "Playfair Display", serif;
   line-height: 1.2;
 }
@@ -570,13 +534,13 @@ Main Components
 }
 @media only screen and (min-width: 768px) {
   .cd-horizontal-timeline .events-content h2 {
-    font-size: 7rem;
+    font-size: 4rem;
   }
   .cd-horizontal-timeline .events-content em {
     font-size: 2rem;
   }
   .cd-horizontal-timeline .events-content p {
-    font-size: 1.8rem;
+    font-size: 1.6rem;
   }
 }
 
@@ -654,256 +618,5 @@ Main Components
     -ms-transform: translateX(0%);
     -o-transform: translateX(0%);
     transform: translateX(0%);
-  }
-}
-@media only screen and (max-width: 768px) {
-  .bio-container {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .bio-photo {
-    margin-right: 0;
-    margin-bottom: 20px;
-  }
-
-  .bio-text {
-    margin-left: 0;
-    text-align: left;
-  }
-
-  .rounded-photo {
-    width: 70%;
-  }
-
-  .section-description {
-    width: 90%;
-    font-size: 1.6rem;
-  }
-
-  .navbar ul {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .navbar ul li {
-    margin-bottom: 10px;
-  }
-}
-
-/* Custom Styles for Timeline */
-.cd-horizontal-timeline .events-content ul,
-.cd-horizontal-timeline .events-content ol {
-  list-style-type: none; /* Remove default bullets or numbering */
-  padding-left: 0; /* Remove default padding for lists */
-}
-
-.cd-horizontal-timeline .events-content li {
-  position: absolute;
-  z-index: 1;
-  width: 100%;
-  left: 0;
-  top: 0;
-  -webkit-transform: translateX(-100%);
-  -moz-transform: translateX(-100%);
-  -ms-transform: translateX(-100%);
-  -o-transform: translateX(-100%);
-  transform: translateX(-100%);
-  padding: 0 5%;
-  opacity: 0;
-  -webkit-animation-duration: 0.4s;
-  -moz-animation-duration: 0.4s;
-  animation-duration: 0.4s;
-  -webkit-animation-timing-function: ease-in-out;
-  -moz-animation-timing-function: ease-in-out;
-  animation-timing-function: ease-in-out;
-}
-
-.cd-horizontal-timeline .events-content li.selected {
-  position: relative;
-  z-index: 2;
-  opacity: 1;
-  -webkit-transform: translateX(0);
-  -moz-transform: translateX(0);
-  -ms-transform: translateX(0);
-  -o-transform: translateX(0);
-  transform: translateX(0);
-}
-
-.cd-horizontal-timeline .events-content li.enter-right,
-.cd-horizontal-timeline .events-content li.leave-right {
-  -webkit-animation-name: cd-enter-right;
-  -moz-animation-name: cd-enter-right;
-  animation-name: cd-enter-right;
-}
-
-.cd-horizontal-timeline .events-content li.enter-left,
-.cd-horizontal-timeline .events-content li.leave-left {
-  -webkit-animation-name: cd-enter-left;
-  -moz-animation-name: cd-enter-left;
-  animation-name: cd-enter-left;
-}
-
-.cd-horizontal-timeline .events-content li.leave-right,
-.cd-horizontal-timeline .events-content li.leave-left {
-  -webkit-animation-direction: reverse;
-  -moz-animation-direction: reverse;
-  animation-direction: reverse;
-}
-
-.cd-horizontal-timeline .events-content li > * {
-  max-width: 800px;
-  margin: 0 auto;
-}
-
-.cd-horizontal-timeline .events-content h2 {
-  font-weight: bold;
-  font-size: 2.6rem;
-  font-family: "Playfair Display", serif;
-  line-height: 1.2;
-}
-
-.cd-horizontal-timeline .events-content em {
-  display: block;
-  font-style: italic;
-  margin: 10px auto;
-}
-
-.cd-horizontal-timeline .events-content em:before {
-  content: '- ';
-}
-
-.cd-horizontal-timeline .events-content p {
-  font-size: 1.4rem;
-  color: #959595;
-}
-
-.cd-horizontal-timeline .events-content em,
-.cd-horizontal-timeline .events-content p {
-  line-height: 1.6;
-}
-
-@media only screen and (min-width: 768px) {
-  .cd-horizontal-timeline .events-content h2 {
-    font-size: 7rem;
-  }
-
-  .cd-horizontal-timeline .events-content em {
-    font-size: 2rem;
-  }
-
-  .cd-horizontal-timeline .events-content p {
-    font-size: 1.8rem;
-  }
-}
-
-@-webkit-keyframes cd-enter-right {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateX(100%);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: translateX(0%);
-  }
-}
-@-moz-keyframes cd-enter-right {
-  0% {
-    opacity: 0;
-    -moz-transform: translateX(100%);
-  }
-  100% {
-    opacity: 1;
-    -moz-transform: translateX(0%);
-  }
-}
-@keyframes cd-enter-right {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateX(100%);
-    -moz-transform: translateX(100%);
-    -ms-transform: translateX(100%);
-    -o-transform: translateX(100%);
-    transform: translateX(100%);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: translateX(0%);
-    -moz-transform: translateX(0%);
-    -ms-transform: translateX(0%);
-    -o-transform: translateX(0%);
-    transform: translateX(0%);
-  }
-}
-@-webkit-keyframes cd-enter-left {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateX(-100%);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: translateX(0%);
-  }
-}
-@-moz-keyframes cd-enter-left {
-  0% {
-    opacity: 0;
-    -moz-transform: translateX(-100%);
-  }
-  100% {
-    opacity: 1;
-    -moz-transform: translateX(0%);
-  }
-}
-@keyframes cd-enter-left {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateX(-100%);
-    -moz-transform: translateX(-100%);
-    -ms-transform: translateX(-100%);
-    -o-transform: translateX(-100%);
-    transform: translateX(-100%);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: translateX(0%);
-    -moz-transform: translateX(0%);
-    -ms-transform: translateX(0%);
-    -o-transform: translateX(0%);
-    transform: translateX(0%);
-  }
-}
-@media only screen and (max-width: 768px) {
-  .bio-container {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .bio-photo {
-    margin-right: 0;
-    margin-bottom: 20px;
-  }
-
-  .bio-text {
-    margin-left: 0;
-    text-align: left;
-  }
-
-  .rounded-photo {
-    width: 70%;
-  }
-
-  .section-description {
-    width: 90%;
-    font-size: 1.6rem;
-  }
-
-  .navbar ul {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .navbar ul li {
-    margin-bottom: 10px;
   }
 }
