--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,7 @@ h3 {
   font-weight: lighter;
   font-size: 2rem;
   line-height: 1;
+  text-align: center;
 }
 
 em {
@@ -43,10 +44,17 @@ em:before {
   content: '- ';
 }
 
-p, .section-description, .cd-horizontal-timeline .events-content p {
+p, .cd-horizontal-timeline .events-content p {
   font-size: 1.6rem;
   color: #959595;
   line-height: 1.6;
+  text-align: justify;
+}
+p, .section-description{
+  text-align: center;
+}
+p, .section-bio-text{
+  text-align: justify;
 }
 
 a {
@@ -120,6 +128,7 @@ header {
 
 .bio-photo, .bio-text {
   flex: 1;
+  text-align: justify;
 }
 
 .bio-photo {
@@ -130,7 +139,6 @@ header {
 
 .bio-text {
   margin-left: 2rem;
-  text-align: left;
 }
 
 .rounded-photo {
@@ -235,6 +243,24 @@ header {
   height: auto;
   border-radius: 8px;
 }
+
+.tech-div {
+  display: flex;
+  align-items: center;
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin: auto;
+  margin-bottom: 20px;
+}
+.tech-div img {
+  margin-right: 20px;
+  width: 40%;
+}
+.tech-photo {
+  width: 60%;
+  text-align: left;
+}
+
 .cd-horizontal-timeline {
   opacity: 0;
   margin: 2em auto;
