--- a/css/styles.css
+++ b/css/styles.css
@@ -97,12 +97,10 @@ header {
   font-family: "Playfair Display", serif;
   font-size: 6rem;
   text-align: left;
-  width: 50%;
 }
 
 .navbar {
   display: flex;
-  width: 50%;
 }
 
 .navbar ul {
@@ -111,14 +109,59 @@ header {
   gap: 2rem;
   margin: 0;
   padding: 0;
-  color:#7b9d6f
+  color: #7b9d6f;
 }
 
 .navbar ul li a {
   font-size: 2rem;
-  color:#7b9d6f
+  color: #7b9d6f;
 }
 
+
+/* Media Queries */
+@media (max-width: 768px) {
+  .header .container {
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem 5%;
+  }
+
+  .logo {
+    font-size: 4rem;
+    width: 100%;
+    text-align: center;
+  }
+
+  .navbar {
+    width: 100%;
+    justify-content: center;
+    margin-top: 1rem;
+  }
+
+  .navbar ul {
+    flex-direction: row;
+    justify-content: center;
+    gap: 1rem;
+  }
+
+  .navbar ul li a {
+    font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .logo {
+    font-size: 3rem;
+  }
+
+  .navbar ul li a {
+    font-size: 1.2rem;
+  }
+}
+
+ol{
+  list-style-type: none;
+}
 .bio-container {
   display: flex;
   align-items: center;
@@ -142,7 +185,7 @@ header {
 }
 
 .rounded-photo {
-  width: 50%;
+  width: 100%;
   height: auto;
   border-radius: 50%;
   object-fit: cover;
