--- a/css/styles.css
+++ b/css/styles.css
@@ -530,6 +530,7 @@ ol{
   -webkit-transition: height 0.4s;
   -moz-transition: height 0.4s;
   transition: height 0.4s;
+  min-height: 410px;
 }
 .cd-horizontal-timeline .events-content li {
   position: absolute;
