--- a/css/styles.css
+++ b/css/styles.css
@@ -604,6 +604,10 @@ ol{
   line-height: 1.6;
 }
 @media only screen and (min-width: 768px) {
+
+  .cd-horizontal-timeline .events-content  {
+    min-height: 600px;
+  }
   .cd-horizontal-timeline .events-content h2 {
     font-size: 4rem;
   }
