--- a/css/styles.css
+++ b/css/styles.css
@@ -126,6 +126,10 @@ header {
     padding: 1rem 5%;
   }
 
+  .cd-horizontal-timeline .events-content {
+    min-height: 450px;
+  }
+
   .logo {
     font-size: 4rem;
     width: 100%;
@@ -442,6 +446,11 @@ ol{
 @media only screen and (min-width: 1100px) {
   .cd-horizontal-timeline {
     margin: 6em auto;
+
+  }
+  .cd-horizontal-timeline .events-content{
+    min-height: 300px;
+
   }
   .cd-horizontal-timeline:before {
     /* never visible - this is used in jQuery to check the current MQ */
@@ -530,7 +539,6 @@ ol{
   -webkit-transition: height 0.4s;
   -moz-transition: height 0.4s;
   transition: height 0.4s;
-  min-height: 500px;
 }
 .cd-horizontal-timeline .events-content li {
   position: absolute;
